12:16AM semi-working prototype. multiple elements still not working.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 <head>
 	<meta charset = "UTF-8">
 	<title>Psychic-Game HW</title>
-	<link rel = "stylesheet" type = "text/css" href = "reset.css" />
-	<link rel = "stylesheet" type = "text/css" href = "style.css" />
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 </head>
 <body>
-	<script src="myscripts.js"></script>
+
+	<script type="text/javascript" src="assets/javascript/game.js"></script>
+
+	<h1>The Psychic Game</h1><br>
+	<h4>Computer: "Guess what letter I'm thinking.... human."<span id="computer"></span></h4><br>
+	<h4>Wins: <span id="wins"></span></h4><br>
+	<h4>Losses: <span id="losses"></span></h4><br>
+	<h4>Guesses Left: <span id="guesses"></span></h4><br>
+	<h4>What you've guessed: <span id="userGuesses"></span></h4><br>
+
 </body>
 </html>
