12:49AM everything's perfectly working, except my HTML and CSS.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
+<!-- Why isn't any of my HTML (h1's, etc.) or CSS working?! -->
+
+
 <!DOCTYPE html>
-<html lang = "en-US">
+<html>
 <head>
-	<meta charset = "UTF-8">
+
 	<title>Psychic-Game HW</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+
 </head>
 <body>
 
